Design error fixes Carousel auto scroll, apply faq hover, spacing changes.

--- a/frontend/src/styles/apply/Faq.module.css
+++ b/frontend/src/styles/apply/Faq.module.css
@@ -38,6 +38,14 @@
   margin: 0;
 }
 
+.question p {
+  transition: color 300ms ease-out;
+}
+
+.question path {
+  transition: fill 300ms ease-out;
+}
+
 /* If svgs are added in this div in the future; this selector may affect it */
 .question:hover p,
 .question:hover path {
