--- a/frontend/src/styles/apply/NonprofitApply.module.css
+++ b/frontend/src/styles/apply/NonprofitApply.module.css
@@ -109,7 +109,7 @@
   }
 
   .faq {
-    margin-top: 51px;
+    margin-top: 110px;
   }
 
   .footerDiv {
